added Dockerfile
