# docs/swagger.json
@@ -24,7 +24,7 @@
     "paths": {
         "/list": {
             "get": {
-                "description": "현재시간 기준 6시간 전까지의 상위 이슈 단어 30개를 반환한다",
+                "description": "현재시간 기준 3시간 전까지의 상위 이슈 단어 30개를 반환한다",
                 "consumes": [
                     "application/json"
                 ],
@@ -41,7 +41,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.WINListResponse"
+                                "$ref": "#/definitions/models.WinList"
                             }
                         }
                     },
@@ -80,7 +80,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.WINTagResponse"
+                            "$ref": "#/definitions/models.WinTag"
                         }
                     },
                     "500": {
@@ -102,7 +102,7 @@
                 }
             }
         },
-        "models.WINListResponse": {
+        "models.WinList": {
             "type": "object",
             "properties": {
                 "count": {
@@ -113,7 +113,7 @@
                 }
             }
         },
-        "models.WINTagResponse": {
+        "models.WinTag": {
             "type": "object",
             "properties": {
                 "percent": {
